# opengl-experiment

./: .gitignore  CMakeLists.txt  LICENSE
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: basic.glsl  fragment.glsl  vertex.glsl
src/: main.cc
src/core/: time.cc  time.h  window.cc  window.h
src/entities/: camera.cc  camera.h
src/graphics/: primitives.cc  primitives.h  shader.cc  shader.h  vertex_array.cc  vertex_array.h
src/world/: block.h  chunk.cc  chunk.h
